# bitmap

./: .editorconfig  CHANGELOG.md  LICENSE  PROTOCOL.md  README.md
client/: .env.example  .prettierrc  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
client/pages/changelog/: +Page.ts
client/pages/index/: +Page.ts
client/pages/proto-docs/: +Page.ts
client/renderer/: +onRenderClient.ts  +onRenderHtml.ts  page.d.ts
client/src/: App.tsx  CheckboxGrid.tsx  bitmap.ts  client.ts  index.ts  utils.ts  vite-env.d.ts
client/src/components/: CheckboxGrid.tsx  Header.tsx  Loading.tsx  Neko.tsx  Spinner.tsx
client/src/style/: color-schemes.css  fonts.css  loading.css  markdown.css  style.css
server/: .gitignore  Cargo.toml  config.toml.example
server/src/: bitmap.rs  common.rs  config.rs  lib.rs  main.rs  protocol.rs  server.rs
