[package]
name = "checkboxes-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
config = { version = "0.14", default-features = false, features = ["toml"] }
httparse = { version = "1.3", default-features = false, features = ["std"] }
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
soketto = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7", features = ["compat"] }
zerocopy = "0.7"
zerocopy-derive = "0.7"
